--- a/source/R5T.F0033/R5T.F0033.csproj
+++ b/source/R5T.F0033/R5T.F0033.csproj
@@ -6,5 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.F0000\source\R5T.F0000\R5T.F0000.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0181\source\R5T.T0181\R5T.T0181.csproj" />
+    <ProjectReference Include="..\R5T.F0033.Platform\R5T.F0033.Platform.csproj" />
   </ItemGroup>
 </Project>
